--- a/scripts/script_func.html
+++ b/scripts/script_func.html
@@ -1,3 +1,6 @@
+<html lang="ru"> 
+<head> <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <meta http-equiv="Content-Language" content="ru"> </head>
+
 <table border="1" cellpadding="5" cellspacing="0" style="width: 0px; height: 0px">
 	<tbody>
 		<tr>
