Delay(ms); function in scripts #33

--- a/scripts/script_func.html
+++ b/scripts/script_func.html
@@ -49,6 +49,12 @@
 			<td colspan="2" style="text-align: center;"><b><font size="5">Основные функции</font></b></td>
 		</tr>
 		<tr>
+			<td style="text-align: center;"><b>Delay(<font color="#0000FF">ms</font>);</b></td>
+			<td style="text-align: center;">
+				<p align="left">Останавливает выполнение скрипта на <font color="#0000FF">ms</font> миллисекунд</p>
+			</td>
+		</tr>
+		<tr>
 			<td style="text-align: center;"><b>ShowMessage(<font color="#0000FF">text</font>);</b></td>
 			<td style="text-align: center;">
 				<p align="left">Аналог ShowMessage</p>
